--- a/css/main.css
+++ b/css/main.css
@@ -55,16 +55,23 @@ header {
 	align-content: center;
 	flex-flow: row wrap;
 	width: 100%;
+	text-align: center;
 	border-bottom: 3px solid #77a466;
 }
 
 header h1 {
 	margin: 0;
-	padding: 10px 0;
+	padding: 20px 0;
 }
 
 header h1 span {
 	color: #77a466;
+}
+
+nav {
+	width: 100%;
+	padding: 20px 0;
+	border-top: 3px solid #77a466;
 }
 
 header nav ul {
@@ -86,7 +93,6 @@ header nav ul li a {
 }
 
 /*The widths are in a percentage!*/
-.bottom-section,
 .top-section {
 	display: flex;
 	justify-content: center;
@@ -96,6 +102,11 @@ header nav ul li a {
 }
 
 .bottom-section {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	flex-flow: row wrap;
+	width: 100%;
 	border-top: 1px solid #eee;
 
 }
@@ -127,20 +138,18 @@ header nav ul li a {
 
 .section-one,
 .section-two,
-.section-three {}
+.section-three {
+	text-align: left;
+}
 
 .section-one h3 {
-	padding: 10px 0;
+	padding: 10px 30px;
 }
 
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
 
 .section-two h3,
 .section-three h3 {
-	padding: 10px 30px;
+	padding: 10px 30px
 }
 
 .menu {
@@ -149,7 +158,7 @@ header nav ul li a {
 }
 
 .menu li {
-	padding: 10px 0;
+	padding: 10px 30px;
 	color: #77a466;
 }
 
